--- a/app/src/main/res/layout/activity_clip_image.xml
+++ b/app/src/main/res/layout/activity_clip_image.xml
@@ -7,8 +7,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="#333333"
-        >
+        android:background="#333333" >
         <ImageView
             android:id="@+id/iv_back"
             android:layout_width="wrap_content"
