--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="#F6F7F9"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="#F6F7F9"
+    android:orientation="vertical"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.0"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/nv_bar"
-    app:layout_constraintVertical_bias="1.0"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    app:layout_constraintVertical_bias="1.0">
 
 
     <LinearLayout
@@ -23,79 +23,120 @@
             android:layout_height="245dp"
             android:background="@mipmap/mine_head_bg">
 
-            <android.support.constraint.ConstraintLayout
-                android:layout_width="wrap_content"
+            <com.google.android.flexbox.FlexboxLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="35dp"
-                android:layout_marginEnd="54dp"
-                android:layout_marginStart="8dp"
                 android:layout_marginTop="50dp"
+                app:flexWrap="nowrap"
+                app:justifyContent="space_around"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/cl_header">
 
-                <TextView
-                    android:id="@+id/tv_today_income"
+                <android.support.constraint.ConstraintLayout
+                    android:id="@+id/cl_cumulative_income"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="10dp"
-                    android:text="0.00"
-                    android:textColor="#ffffffff"
-                    android:textSize="24sp"
-                    app:layout_constraintBottom_toTopOf="@+id/textView39"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <TextView
-                    android:id="@+id/textView39"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/today_earnings"
-                    android:textColor="#ffffffff"
-                    android:textSize="13sp"
+                    android:layout_marginBottom="35dp"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent" />
-            </android.support.constraint.ConstraintLayout>
+                    app:layout_constraintStart_toStartOf="parent">
 
-            <android.support.constraint.ConstraintLayout
-                android:id="@+id/cl_cumulative_income"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="35dp"
-                android:layout_marginStart="54dp"
-                android:layout_marginTop="50dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/cl_header">
+                    <TextView
+                        android:id="@+id/tv_cumulative_income"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="10dp"
+                        android:text="0.00"
+                        android:textColor="#ffffffff"
+                        android:textSize="24sp"
+                        app:layout_constraintBottom_toTopOf="@+id/textView38"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
 
-                <TextView
-                    android:id="@+id/tv_cumulative_income"
+                    <TextView
+                        android:id="@+id/textView38"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/accumulated_income"
+                        android:textColor="#ffffffff"
+                        android:textSize="13sp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent" />
+                </android.support.constraint.ConstraintLayout>
+
+                <android.support.constraint.ConstraintLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="10dp"
-                    android:text="0.00"
-                    android:textColor="#ffffffff"
-                    android:textSize="24sp"
-                    app:layout_constraintBottom_toTopOf="@+id/textView38"
+                    android:layout_marginBottom="35dp"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintHorizontal_bias="1.0"
+                    app:layout_constraintStart_toStartOf="parent">
 
-                <TextView
-                    android:id="@+id/textView38"
+                    <TextView
+                        android:id="@+id/tv_today_income"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="10dp"
+                        android:text="0.00"
+                        android:textColor="#ffffffff"
+                        android:textSize="24sp"
+                        app:layout_constraintBottom_toTopOf="@+id/textView39"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <TextView
+                        android:id="@+id/textView39"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/today_earnings"
+                        android:textColor="#ffffffff"
+                        android:textSize="13sp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent" />
+                </android.support.constraint.ConstraintLayout>
+
+
+                <android.support.constraint.ConstraintLayout
+                    android:id="@+id/cl_coins_count"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/accumulated_income"
-                    android:textColor="#ffffffff"
-                    android:textSize="13sp"
-                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:layout_marginBottom="35dp"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent" />
-            </android.support.constraint.ConstraintLayout>
+                    app:layout_constraintHorizontal_bias="1.0"
+                    app:layout_constraintStart_toStartOf="parent">
+
+                    <TextView
+                        android:id="@+id/tv_gold_coin"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="10dp"
+                        android:text="0"
+                        android:textColor="#ffffffff"
+                        android:textSize="24sp"
+                        app:layout_constraintBottom_toTopOf="@+id/textView41"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <TextView
+                        android:id="@+id/textView41"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/coin_count"
+                        android:textColor="#ffffffff"
+                        android:textSize="13sp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent" />
+                </android.support.constraint.ConstraintLayout>
+            </com.google.android.flexbox.FlexboxLayout>
+
 
             <android.support.constraint.ConstraintLayout
                 android:id="@+id/cl_header"
@@ -221,9 +262,9 @@
                 android:layout_marginBottom="8dp"
                 android:layout_marginEnd="4dp"
                 android:layout_marginTop="8dp"
+                android:text="@string/to_withdraw"
                 android:textColor="#ffff9108"
                 android:textSize="14sp"
-                android:text="@string/to_withdraw"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/imageView20"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -450,9 +491,9 @@
         </android.support.constraint.ConstraintLayout>
 
         <android.support.constraint.ConstraintLayout
+            android:id="@+id/cl_customer_service"
             android:layout_width="match_parent"
             android:layout_height="62dp"
-            android:id="@+id/cl_customer_service"
             android:background="#FFFFFF">
 
             <ImageView
